--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
     "tailwindcss": "^3.4.10"
   },
   "scripts" :  {
-    "dev": "npx tailwindcss -i ./public/css/input.css -o ./public/css/style.css"
+    "dev": "npx tailwindcss -i ./static/css/input.css -o ./static/css/style.css"
   }
 }
